eks/broker-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-api-depolyment
  labels:
    app: broker-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-api
  template:
    metadata:
      labels:
        app: broker-api
    spec:
      containers:
      - name: broker-api
        image: royceazure/stockinfo:project7-broker
        #k8s 永遠抓最新的imgage
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 9090
        command: ["/app/main"]
      nodeSelector:
        group: app
      imagePullSecrets:
      - name: stockinfo
