eks/depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-info-api-depolyment
  labels:
    app: stock-info-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-info-api
  template:
    metadata:
      labels:
        app: stock-info-api
    spec:
      containers:
      - name: stock-info-api
        image: 579275018124.dkr.ecr.ap-northeast-1.amazonaws.com/stockinfo:6712c6e8e4d761015f86b1a7adf846f40c09e531
        ports:
        - containerPort: 8080
