eks/distributor-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributor
spec:
  replicas: 1  # 根据需要调整副本数量
  selector:
    matchLabels:
      app: distributor
  template:
    metadata:
      labels:
        app: distributor
    spec:
      containers:
        - name: distributor
          image: royceazure/stockinfo:project7-distributor
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
            - containerPort: 9093
          command: ["/app/main"]
      # nodeSelector:
      #   group: app
      imagePullSecrets:
        - name: stockinfo
