eks/logger-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-api-depolyment
  labels:
    app: logger-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-api
  template:
    metadata:
      labels:
        app: logger-api
    spec:
      containers:
      - name: logger-api
        image: royceazure/stockinfo:project7-logger 
        imagePullPolicy: Always
        command: ["/app/main"]
      imagePullSecrets:
      - name: stockinfo
