eks/postgres-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12-alpine
        ports:
        - containerPort: 5432
      #   volumeMounts:
      #   - name: postgres-storage
      #     mountPath: /var/lib/postgresql/data
      # # volumes:
      # # - name: postgres-storage
      # #   persistentVolumeClaim:
      # #     claimName: postgres-pvc
