eks/redis-scheduler-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-scheduler
  template:
    metadata:
      labels:
        app: redis-scheduler
    spec:
      containers:
      - name: redis-scheduler
        image: redis:7-alpine
        ports:
        - containerPort: 6379
      # nodeSelector:
      #   group: app
