eks/scheduler-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-api-depolyment
  labels:
    app: scheduler-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler-api
  template:
    metadata:
      labels:
        app: scheduler-api
    spec:
      containers:
      - name: scheduler-api
        image: royceazure/stockinfo:project7-scheduler 
        imagePullPolicy: Always
        command: ["/app/main"]
      nodeSelector:
        group: app
      imagePullSecrets:
      - name: stockinfo
