eks/stockinfo-depolyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-info-api-depolyment
  labels:
    app: stock-info-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-info-api
  template:
    metadata:
      labels:
        app: stock-info-api
    spec:
      containers:
      - name: stock-info-api
        image: royceazure/stockinfo:project7-stockinfo
        #k8s 永遠抓最新的imgage
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 9091
        command: ["/app/main"]
      imagePullSecrets:
      - name: stockinfo
