eks/distributor-service.yml
apiVersion: v1
kind: Service
metadata:
  name: distributor-api-service
spec:
  selector:
    app: distributor
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: grpc-port
      protocol: TCP
      port: 9093
      targetPort: 9093
