eks/redis-asynq-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-asynq-service
spec:
  selector:
    app: redis-asynq
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
