eks/redis-scheduler-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-scheduler-service
spec:
  selector:
    app: redis-scheduler
  ports:
  - port: 6380
    targetPort: 6379
