eks/scheduler-service.yml
apiVersion: v1
kind: Service
metadata:
  name: scheduler-api-service
spec:
#要控制哪個pod
  selector:
    app: scheduler-api
  ports:
    - name: http-port
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: grpc-port
      protocol: TCP
      port: 9092
      targetPort: 9092
  type: ClusterIP
