eks/stockinfo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stock-info-api-service
spec:
#要控制哪個pod
  selector:
    app: stock-info-api
  ports:
    - name: http-port
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc-port
      protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
