eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-info-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "a5082729bb5e849a8a676eedbee08cf2-e28c5aedd565a238.elb.ap-northeast-1.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stock-info-api-service
            port:
              number: 80
